dev-libs/json-c: Bump v.0.17

--- a/packages/atoms/base-net/dev-libs/json-c/definition.yaml
+++ b/packages/atoms/base-net/dev-libs/json-c/definition.yaml
@@ -1,5 +1,5 @@
 name: json-c
-version: "0.16"
+version: "0.17"
 category: dev-libs
 use_flags:
 - -doc
@@ -23,4 +23,4 @@ labels:
   kit: core-kit
   original.package.name: dev-libs/json-c
   original.package.slot: "0"
-  original.package.version: 0.16_p20220414-r1
+  original.package.version: 0.17_p20230812
