net-misc/networkmanager: Bump v.1.44.2

--- a/packages/atoms/base-net/net-misc/networkmanager/definition.yaml
+++ b/packages/atoms/base-net/net-misc/networkmanager/definition.yaml
@@ -1,5 +1,5 @@
 name: networkmanager
-version: 1.42.8+2
+version: 1.44.2
 category: net-misc
 use_flags:
 - -audit
@@ -137,4 +137,4 @@ labels:
   kit: net-kit
   original.package.name: net-misc/networkmanager
   original.package.slot: "0"
-  original.package.version: 1.42.8
+  original.package.version: 1.44.2
