--- a/packages/atoms/base-net/net-misc/modemmanager/definition.yaml
+++ b/packages/atoms/base-net/net-misc/modemmanager/definition.yaml
@@ -1,5 +1,5 @@
 name: modemmanager
-version: 1.21.2
+version: 1.22.0
 category: net-misc
 use_flags:
 - -mbim
@@ -51,4 +51,4 @@ labels:
   kit: net-kit
   original.package.name: net-misc/modemmanager
   original.package.slot: "0"
-  original.package.version: 1.21.2-r1
+  original.package.version: 1.22.0
