atoms/base-net: Review build order

--- a/packages/atoms/base-net/app-text/asciidoc/build.yaml
+++ b/packages/atoms/base-net/app-text/asciidoc/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: rubygems
+- name: macaroni-funtoo-race8
   version: '>=0'
-  category: dev-ruby
+  category: seed
