--- a/packages/atoms/base-net/dev-libs/newt/build.yaml
+++ b/packages/atoms/base-net/dev-libs/newt/build.yaml
@@ -27,6 +27,6 @@ requires:
 - name: slang
   version: '>=0'
   category: sys-libs
-- name: resolvconf
+- name: json-c
   version: '>=0'
-  category: virtual
+  category: dev-libs
