--- a/packages/atoms/base-net/media-libs/alsa-lib/build.yaml
+++ b/packages/atoms/base-net/media-libs/alsa-lib/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libndp
+- name: alsa-ucm-conf
   version: '>=0'
-  category: net-libs
+  category: media-libs
