--- a/packages/atoms/base-net/net-analyzer/tcpreplay/build.yaml
+++ b/packages/atoms/base-net/net-analyzer/tcpreplay/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libpcapnav
+- name: libdnet
   version: '>=0'
-  category: net-libs
+  category: dev-libs
