--- a/packages/atoms/base-net/net-misc/mobile-broadband-provider-info/build.yaml
+++ b/packages/atoms/base-net/net-misc/mobile-broadband-provider-info/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libnetfilter_conntrack
+- name: libndp
   version: '>=0'
   category: net-libs
