--- a/packages/atoms/base-net/virtual/resolvconf/build.yaml
+++ b/packages/atoms/base-net/virtual/resolvconf/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: bluez
+- name: modemmanager
   version: '>=0'
-  category: net-wireless
+  category: net-misc
