--- a/packages/atoms/base-net/dev-libs/ell/build.yaml
+++ b/packages/atoms/base-net/dev-libs/ell/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: alsa-topology-conf
+- name: libqmi
   version: '>=0'
-  category: media-libs
+  category: net-libs
