--- a/packages/atoms/base-net/dev-libs/json-c/build.yaml
+++ b/packages/atoms/base-net/dev-libs/json-c/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libqmi
+- name: ell
   version: '>=0'
-  category: net-libs
+  category: dev-libs
