--- a/packages/atoms/base-net/dev-libs/libdnet/build.yaml
+++ b/packages/atoms/base-net/dev-libs/libdnet/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: check
+- name: libpcapnav
   version: '>=0'
-  category: dev-libs
+  category: net-libs
