--- a/packages/atoms/base-net/media-libs/alsa-ucm-conf/build.yaml
+++ b/packages/atoms/base-net/media-libs/alsa-ucm-conf/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: json-c
+- name: ppp
   version: '>=0'
-  category: dev-libs
+  category: net-dialup
