--- a/packages/atoms/base-net/net-libs/libndp/build.yaml
+++ b/packages/atoms/base-net/net-libs/libndp/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: ppp
+- name: alsa-lib
   version: '>=0'
-  category: net-dialup
+  category: media-libs
