--- a/packages/atoms/base-net/net-libs/libnetfilter_cthelper/build.yaml
+++ b/packages/atoms/base-net/net-libs/libnetfilter_cthelper/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libical
+- name: mobile-broadband-provider-info
   version: '>=0'
-  category: dev-libs
+  category: net-misc
