--- a/packages/atoms/base-net/net-firewall/nftables/build.yaml
+++ b/packages/atoms/base-net/net-firewall/nftables/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: docbook2X
+- name: libedit
   version: '>=0'
-  category: app-text
+  category: dev-libs
