--- a/packages/atoms/base-net/net-firewall/nftables/definition.yaml
+++ b/packages/atoms/base-net/net-firewall/nftables/definition.yaml
@@ -1,11 +1,11 @@
 name: nftables
-version: 1.0.8
+version: 1.0.8+1
 category: net-firewall
 use_flags:
 - -doc
+- cli
 - gmp
 - json
-- readline
 requires:
 - name: gmp
   version: '>=0'
@@ -13,12 +13,12 @@ requires:
 - name: jansson
   version: '>=0'
   category: dev-libs
+- name: libedit
+  version: '>=0'
+  category: dev-libs
 - name: libnftnl
   version: '>=0'
   category: net-libs
-- name: readline
-  version: '>=0'
-  category: sys-libs
 annotations:
   subsets:
     rules:
