dev-libs/libedit: Moved to base-net

--- a/packages/atoms/base-net/dev-libs/libedit/build.yaml
+++ b/packages/atoms/base-net/dev-libs/libedit/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race11
+- name: docbook2X
   version: '>=0'
-  category: seed
+  category: app-text
