toolchain/base-net: Update rdeps

--- a/packages/toolchain/base-net/definition.yaml
+++ b/packages/toolchain/base-net/definition.yaml
@@ -54,6 +54,9 @@ requires:
   - name: libdnet
     category: dev-libs
     version: '>=0'
+  - name: libedit
+    category: dev-libs
+    version: '>=0'
   - name: libical
     category: dev-libs
     version: '>=0'
