portage-converter/base-net: Update nftables use flags

--- a/portage-converter/base-net.yml
+++ b/portage-converter/base-net.yml
@@ -1002,12 +1002,8 @@ artefacts:
 
 - tree: packages/atoms/base-net
   uses:
-    enabled:
-      - gmp
-      - json
-      - modern_kernel
-      - readline
     disabled:
+      - xtables
       - debug
       - doc
   packages:
