app-text/asciidoc: Revert change on bdep

--- a/packages/atoms/base-net/app-text/asciidoc/build.yaml
+++ b/packages/atoms/base-net/app-text/asciidoc/build.yaml
@@ -24,6 +24,7 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: macaroni-funtoo-race8
+# TODO: split base-net and base-lang on different race
+- name: rubygems
   version: '>=0'
-  category: seed
+  category: dev-ruby
