atoms/base-net: Review build order

--- a/packages/atoms/base-net/dev-libs/libedit/build.yaml
+++ b/packages/atoms/base-net/dev-libs/libedit/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: docbook2X
+- name: jansson
   version: '>=0'
-  category: app-text
+  category: dev-libs
