--- a/packages/atoms/base-net/dev-libs/libical/build.yaml
+++ b/packages/atoms/base-net/dev-libs/libical/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libnetfilter_conntrack
+- name: modemmanager
   version: '>=0'
-  category: net-libs
+  category: net-misc
