--- a/packages/atoms/base-net/dev-libs/newt/build.yaml
+++ b/packages/atoms/base-net/dev-libs/newt/build.yaml
@@ -24,9 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: slang
+- name: resolvconf
   version: '>=0'
-  category: sys-libs
-- name: json-c
-  version: '>=0'
-  category: dev-libs
+  category: virtual
