--- a/packages/atoms/base-net/net-firewall/nftables/build.yaml
+++ b/packages/atoms/base-net/net-firewall/nftables/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libedit
+- name: libnftnl
   version: '>=0'
-  category: dev-libs
+  category: net-libs
