--- a/packages/atoms/base-net/net-wireless/bluez/build.yaml
+++ b/packages/atoms/base-net/net-wireless/bluez/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: resolvconf
+- name: mobile-broadband-provider-info
   version: '>=0'
-  category: virtual
+  category: net-misc
