--- a/packages/atoms/base-net/app-text/docbook2X/build.yaml
+++ b/packages/atoms/base-net/app-text/docbook2X/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libnftnl
+- name: XML-LibXML
   version: '>=0'
-  category: net-libs
+  category: dev-perl
