--- a/packages/atoms/base-net/dev-libs/ell/build.yaml
+++ b/packages/atoms/base-net/dev-libs/ell/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libqmi
+- name: slang
   version: '>=0'
-  category: net-libs
+  category: sys-libs
