--- a/packages/atoms/base-net/net-dialup/ppp/build.yaml
+++ b/packages/atoms/base-net/net-dialup/ppp/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: newt
+- name: libqmi
   version: '>=0'
-  category: dev-libs
+  category: net-libs
