--- a/packages/atoms/base-net/net-libs/libnetfilter_cthelper/build.yaml
+++ b/packages/atoms/base-net/net-libs/libnetfilter_cthelper/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: mobile-broadband-provider-info
+- name: alsa-lib
   version: '>=0'
-  category: net-misc
+  category: media-libs
