--- a/packages/atoms/base-net/net-libs/libnftnl/build.yaml
+++ b/packages/atoms/base-net/net-libs/libnftnl/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: jansson
+- name: docbook2X
   version: '>=0'
-  category: dev-libs
+  category: app-text
