--- a/packages/atoms/base-net/net-libs/libqmi/build.yaml
+++ b/packages/atoms/base-net/net-libs/libqmi/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libnfnetlink
+- name: json-c
   version: '>=0'
-  category: net-libs
+  category: dev-libs
