toolchain/base-net: Update rdeps

--- a/packages/toolchain/base-net/definition.yaml
+++ b/packages/toolchain/base-net/definition.yaml
@@ -63,6 +63,9 @@ requires:
   - name: newt
     category: dev-libs
     version: '>=0'
+  - name: oniguruma
+    category: dev-libs
+    version: '>=0'
   - name: xmlrpc-c
     category: dev-libs
     version: '>=0'
@@ -284,6 +287,9 @@ requires:
     version: '>=0'
   - name: nss-myhostname
     category: sys-auth
+    version: '>=0'
+  - name: slang
+    category: sys-libs
     version: '>=0'
   - name: talloc
     category: sys-libs
