atoms/base-net: Update build order

--- a/packages/atoms/base-net/dev-libs/ell/build.yaml
+++ b/packages/atoms/base-net/dev-libs/ell/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: slang
+- name: libnfnetlink
   version: '>=0'
-  category: sys-libs
+  category: net-libs
