--- a/packages/atoms/base-net/net-misc/modemmanager/build.yaml
+++ b/packages/atoms/base-net/net-misc/modemmanager/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libndp
+- name: resolvconf
   version: '>=0'
-  category: net-libs
+  category: virtual
