--- a/packages/atoms/base-net/net-misc/networkmanager/build.yaml
+++ b/packages/atoms/base-net/net-misc/networkmanager/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: dnsmasq
+- name: modemmanager
   version: '>=0'
-  category: net-dns
+  category: net-misc
