--- a/packages/atoms/base-net/sys-libs/slang/build.yaml
+++ b/packages/atoms/base-net/sys-libs/slang/build.yaml
@@ -24,9 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: oniguruma
-  version: '>=0'
-  category: dev-libs
-- name: libnfnetlink
+- name: libndp
   version: '>=0'
   category: net-libs
