--- a/packages/atoms/base-net/dev-libs/oniguruma/build.yaml
+++ b/packages/atoms/base-net/dev-libs/oniguruma/build.yaml
@@ -23,3 +23,7 @@ package_dir: /pkgdir/{{ .Values.name }}
 excludes:
 - ^/var/cache/portage/
 - ^/var/git/
+requires:
+- name: alsa-topology-conf
+  version: '>=0'
+  category: media-libs
