--- a/packages/atoms/base-net/net-libs/libnfnetlink/build.yaml
+++ b/packages/atoms/base-net/net-libs/libnfnetlink/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: alsa-topology-conf
+- name: oniguruma
   version: '>=0'
-  category: media-libs
+  category: dev-libs
