--- a/packages/atoms/base-net/net-wireless/bluez/build.yaml
+++ b/packages/atoms/base-net/net-wireless/bluez/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: mobile-broadband-provider-info
+- name: newt
   version: '>=0'
-  category: net-misc
+  category: dev-libs
