dev-python/psutil: Bump v.5.9.6

--- a/packages/atoms/db/dev-python/psutil/definition.yaml
+++ b/packages/atoms/db/dev-python/psutil/definition.yaml
@@ -1,5 +1,5 @@
 name: psutil
-version: 5.9.5
+version: 5.9.6
 category: dev-python
 use_flags:
 - -python_targets_pypy3
@@ -42,4 +42,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/psutil
   original.package.slot: "0"
-  original.package.version: 5.9.5-r1
+  original.package.version: 5.9.6
