--- a/packages/atoms/db/dev-python/markdown/definition.yaml
+++ b/packages/atoms/db/dev-python/markdown/definition.yaml
@@ -1,5 +1,5 @@
 name: markdown
-version: 3.4.4
+version: "3.5"
 category: dev-python
 use_flags:
 - -python_targets_pypy3
@@ -49,4 +49,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/markdown
   original.package.slot: "0"
-  original.package.version: 3.4.4
+  original.package.version: "3.5"
