--- a/packages/atoms/base-qt/dev-qt-5/qtxml/definition.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qtxml/definition.yaml
@@ -1,5 +1,5 @@
 name: qtxml
-version: 5.15.2
+version: 5.15.2+1
 category: dev-qt-5
 use_flags:
 - -test
@@ -24,4 +24,4 @@ labels:
   kit: qt-kit
   original.package.name: dev-qt/qtxml
   original.package.slot: "5"
-  original.package.version: 5.15.2_p20230802
+  original.package.version: 5.15.2_p20231006
