--- a/packages/atoms/db/dev-python/cheetah3/definition.yaml
+++ b/packages/atoms/db/dev-python/cheetah3/definition.yaml
@@ -1,5 +1,5 @@
 name: cheetah3
-version: 3.2.6
+version: 3.2.6+1
 category: dev-python
 use_flags:
 - -python_targets_python3_10
@@ -35,4 +35,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/cheetah3
   original.package.slot: "0"
-  original.package.version: 3.2.6_p1
+  original.package.version: 3.2.6_p2
