--- a/packages/atoms/db/dev-db/mongodb/definition.yaml
+++ b/packages/atoms/db/dev-db/mongodb/definition.yaml
@@ -1,5 +1,5 @@
 name: mongodb
-version: 4.4.23+1
+version: 4.4.25
 category: dev-db
 use_flags:
 - -debug
@@ -94,4 +94,4 @@ labels:
   kit: dev-kit
   original.package.name: dev-db/mongodb
   original.package.slot: "0"
-  original.package.version: 4.4.23
+  original.package.version: 4.4.25
