--- a/packages/atoms/base-qt/dev-qt-5/qttranslations/definition.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qttranslations/definition.yaml
@@ -1,5 +1,5 @@
 name: qttranslations
-version: 5.15.2
+version: 5.15.2+1
 category: dev-qt-5
 use_flags:
 - -test
@@ -22,4 +22,4 @@ labels:
   kit: qt-kit
   original.package.name: dev-qt/qttranslations
   original.package.slot: "5"
-  original.package.version: 5.15.2_p20230424
+  original.package.version: 5.15.2_p20230609
