--- a/packages/atoms/base-qt/dev-qt-5/qttest/definition.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qttest/definition.yaml
@@ -1,5 +1,5 @@
 name: qttest
-version: 5.15.2
+version: 5.15.2+1
 category: dev-qt-5
 use_flags:
 - -test
@@ -26,4 +26,4 @@ labels:
   kit: qt-kit
   original.package.name: dev-qt/qttest
   original.package.slot: "5"
-  original.package.version: 5.15.2_p20230802
+  original.package.version: 5.15.2_p20231006
