--- a/packages/atoms/base-qt/dev-qt-5/qtbluetooth/definition.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qtbluetooth/definition.yaml
@@ -1,5 +1,5 @@
 name: qtbluetooth
-version: 5.15.2
+version: 5.15.2+1
 category: dev-qt-5
 use_flags:
 - -test
@@ -40,4 +40,4 @@ labels:
   kit: qt-kit
   original.package.name: dev-qt/qtbluetooth
   original.package.slot: "5"
-  original.package.version: 5.15.2_p20230612
+  original.package.version: 5.15.2_p20231004
