--- a/packages/atoms/base-qt/dev-qt-5/qtdiag/definition.yaml
+++ b/packages/atoms/base-qt/dev-qt-5/qtdiag/definition.yaml
@@ -1,5 +1,5 @@
 name: qtdiag
-version: 5.15.2
+version: 5.15.2+1
 category: dev-qt-5
 use_flags:
 - -test
@@ -34,4 +34,4 @@ labels:
   kit: qt-kit
   original.package.name: dev-qt/qtdiag
   original.package.slot: "5"
-  original.package.version: 5.15.2_p20230612
+  original.package.version: 5.15.2_p20231004
