--- a/packages/atoms/base-multimedia/dev-libs/dbus-c++/definition.yaml
+++ b/packages/atoms/base-multimedia/dev-libs/dbus-c++/definition.yaml
@@ -1,5 +1,5 @@
 name: dbus-c++
-version: 0.9.0
+version: 0.9.0+1
 category: dev-libs
 use_flags:
 - -doc
@@ -21,14 +21,17 @@ uri:
 - https://sourceforge.net/projects/dbus-cplusplus/ https://sourceforge.net/apps/mediawiki/dbus-cplusplus/index.php?title=Main_Page
 license: LGPL-2.1+
 labels:
-  DEPEND: sys-apps/dbus[-mgorny(-)] ecore? ( dev-libs/efl ) glib? ( dev-libs/glib:2[-mgorny(-)]
-    ) doc? ( app-doc/doxygen ) dev-util/cppunit[-mgorny(-)] virtual/pkgconfig >=app-portage/elt-patches-20170815
-  IUSE: doc ecore glib static-libs test abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32
-    abi_mips_n64 abi_mips_o32 abi_s390_32 abi_s390_64
-  RDEPEND: sys-apps/dbus[-mgorny(-)] ecore? ( dev-libs/efl ) glib? ( dev-libs/glib:2[-mgorny(-)]
+  BDEPEND: virtual/pkgconfig test? ( sys-apps/dbus[X] ) >=app-portage/elt-patches-20170815
+    !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.16.1:1.16 >=sys-devel/automake-1.15.1:1.15
+    ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 test? ( !prefix? ( x11-base/xorg-server[xvfb]
+    ) x11-apps/xhost )
+  DEPEND: dev-libs/expat sys-apps/dbus ecore? ( dev-libs/efl ) glib? ( dev-libs/glib:2
+    ) dev-util/cppunit
+  IUSE: ecore glib test test
+  RDEPEND: dev-libs/expat sys-apps/dbus ecore? ( dev-libs/efl ) glib? ( dev-libs/glib:2
     )
   emerge.packages: dev-libs/dbus-c++
-  kit: dev-kit
+  kit: media-kit
   original.package.name: dev-libs/dbus-c++
   original.package.slot: "0"
-  original.package.version: 0.9.0-r3
+  original.package.version: 0.9.0-r5
