--- a/packages/atoms/base-qt2/dev-qt-5/qtwebsockets/definition.yaml
+++ b/packages/atoms/base-qt2/dev-qt-5/qtwebsockets/definition.yaml
@@ -1,5 +1,5 @@
 name: qtwebsockets
-version: 5.15.2
+version: 5.15.2+1
 category: dev-qt-5
 use_flags:
 - -test
@@ -30,4 +30,4 @@ labels:
   kit: qt-kit
   original.package.name: dev-qt/qtwebsockets
   original.package.slot: "5"
-  original.package.version: 5.15.2_p20230612
+  original.package.version: 5.15.2_p20231004
