dev-python/PyQt5: Bump v.5.15.10

--- a/packages/atoms/base-qt2/dev-python/PyQt5/definition.yaml
+++ b/packages/atoms/base-qt2/dev-python/PyQt5/definition.yaml
@@ -1,5 +1,5 @@
 name: PyQt5
-version: 5.15.9+1
+version: 5.15.10
 category: dev-python
 use_flags:
 - -help
@@ -121,4 +121,4 @@ labels:
   kit: qt-kit
   original.package.name: dev-python/PyQt5
   original.package.slot: "0"
-  original.package.version: 5.15.9
+  original.package.version: 5.15.10
