dev-qt-5/qdbus: Bump v.5.15.2+4

--- a/packages/atoms/base-qt2/dev-qt-5/qdbus/build.yaml
+++ b/packages/atoms/base-qt2/dev-qt-5/qdbus/build.yaml
@@ -1,4 +1,8 @@
 prelude:
+# TODO: analyze this behaviour. It seems there is something done by eclass
+# on postinst phase of the qtcore module.
+- >-
+  emerge -j qtcore
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
