gnome-base/gnome-shell: Bump v.3.36.7+1

--- a/packages/atoms/base-gnome3/gnome-base/gnome-shell/definition.yaml
+++ b/packages/atoms/base-gnome3/gnome-base/gnome-shell/definition.yaml
@@ -1,5 +1,5 @@
 name: gnome-shell
-version: 3.36.7
+version: 3.36.7+1
 category: gnome-base
 use_flags:
 - -nsplugin
@@ -138,4 +138,4 @@ labels:
   kit: gnome-kit
   original.package.name: gnome-base/gnome-shell
   original.package.slot: "0"
-  original.package.version: 3.36.7-r1
+  original.package.version: 3.36.7-r2
