--- a/packages/atoms/base-gnome3/app-misc/jq/definition.yaml
+++ b/packages/atoms/base-gnome3/app-misc/jq/definition.yaml
@@ -1,5 +1,5 @@
 name: jq
-version: "1.6"
+version: "1.7"
 category: app-misc
 use_flags:
 - -static-libs
@@ -23,13 +23,12 @@ labels:
   BDEPEND: '>=app-portage/elt-patches-20170815 !<sys-devel/gettext-0.18.1.1-r3 ||
     ( >=sys-devel/automake-1.16.1:1.16 >=sys-devel/automake-1.15.1:1.15 ) >=sys-devel/autoconf-2.69
     >=sys-devel/libtool-2.4'
-  DEPEND: '>=sys-devel/bison-3.0 sys-devel/flex oniguruma? ( >=dev-libs/oniguruma-6.1.3:=[static-libs?]
-    )'
-  IUSE: oniguruma static-libs
-  RDEPEND: '!static-libs? ( oniguruma? ( >=dev-libs/oniguruma-6.1.3[static-libs?]
-    ) )'
+  DEPEND: sys-devel/bison sys-devel/flex oniguruma? ( dev-libs/oniguruma:=[static-libs?]
+    )
+  IUSE: +oniguruma static-libs
+  RDEPEND: '!static-libs? ( oniguruma? ( dev-libs/oniguruma[static-libs?] ) )'
   emerge.packages: app-misc/jq
   kit: dev-kit
   original.package.name: app-misc/jq
   original.package.slot: "0"
-  original.package.version: 1.6-r3
+  original.package.version: "1.7"
