x11-drivers/nvidia-drivers: Bump v.535.86.05

--- a/packages/atoms/nvidia/x11-drivers/nvidia-drivers/definition.yaml
+++ b/packages/atoms/nvidia/x11-drivers/nvidia-drivers/definition.yaml
@@ -1,5 +1,5 @@
 name: nvidia-drivers
-version: 525.85.05+1
+version: 535.86.05
 category: x11-drivers
 use_flags:
 - X
@@ -69,4 +69,4 @@ labels:
   kit: core-gl-kit
   original.package.name: x11-drivers/nvidia-drivers
   original.package.slot: "0"
-  original.package.version: 525.85.05-r1
+  original.package.version: 535.86.05
