--- a/packages/atoms/base-gnome4/media-gfx/imagemagick/definition.yaml
+++ b/packages/atoms/base-gnome4/media-gfx/imagemagick/definition.yaml
@@ -1,5 +1,5 @@
 name: imagemagick
-version: 7.1.1.15+2
+version: 7.1.1.20
 category: media-gfx
 use_flags:
 - -fftw
@@ -118,7 +118,7 @@ labels:
     X? ( x11-base/xorg-proto )
   IUSE: bzip2 corefonts +cxx djvu fftw fontconfig fpx graphviz hdri heif jbig jpeg
     jpeg2k lcms lqr lzma opencl openexr openmp pango perl +png postscript q32 q8 raw
-    static-libs svg test tiff truetype webp wmf X xml zip zlib
+    static-libs svg tiff truetype webp wmf X xml zip zlib
   RDEPEND: dev-libs/libltdl:0 bzip2? ( app-arch/bzip2 ) corefonts? ( media-fonts/corefonts
     ) djvu? ( app-text/djvu ) fftw? ( sci-libs/fftw:3.0 ) fontconfig? ( media-libs/fontconfig
     ) fpx? ( >=media-libs/libfpx-1.3.0-r1 ) graphviz? ( media-gfx/graphviz ) heif?
@@ -136,4 +136,4 @@ labels:
   kit: media-kit
   original.package.name: media-gfx/imagemagick
   original.package.slot: "0"
-  original.package.version: 7.1.1.15
+  original.package.version: 7.1.1.20
