sys-apps/hwloc: Bump v.2.9.3

--- a/packages/atoms/tools/sys-apps/hwloc/definition.yaml
+++ b/packages/atoms/tools/sys-apps/hwloc/definition.yaml
@@ -1,5 +1,5 @@
 name: hwloc
-version: 2.9.2
+version: 2.9.3
 category: sys-apps
 use_flags:
 - cairo
@@ -48,4 +48,4 @@ labels:
   kit: core-hw-kit
   original.package.name: sys-apps/hwloc
   original.package.slot: "0"
-  original.package.version: 2.9.2-r1
+  original.package.version: 2.9.3
