app-emulation/docker: Add provides, conflicts

--- a/packages/atoms-extra/server/app-emulation/docker/definition.yaml
+++ b/packages/atoms-extra/server/app-emulation/docker/definition.yaml
@@ -40,6 +40,14 @@ requires:
 - name: entities-catalog
   version: '>=0'
   category: macaroni
+provides:
+- name: docker-proxy
+  version: 24.0.6
+  category: app-emulation
+conflicts:
+- name: docker-proxy
+  version: "<24.0.0"
+  category: app-emulation
 annotations:
   subsets:
     rules:
