--- a/packages/atoms/base-gnome4/media-libs/openexr/build.yaml
+++ b/packages/atoms/base-gnome4/media-libs/openexr/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+# Temporary
+- >-
+  sed -i -e 's|docs/SymbolVisibility.rst||g' /var/git/meta-repo/kits/media-kit/media-libs/openexr/openexr-3.2.1.ebuild
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
