--- a/packages/atoms/python-extra/net-libs/zeromq/definition.yaml
+++ b/packages/atoms/python-extra/net-libs/zeromq/definition.yaml
@@ -1,5 +1,5 @@
 name: zeromq
-version: 4.3.4+1
+version: 4.3.5
 category: net-libs
 use_flags:
 - -doc
@@ -36,4 +36,4 @@ labels:
   kit: net-kit
   original.package.name: net-libs/zeromq
   original.package.slot: "0"
-  original.package.version: 4.3.4
+  original.package.version: 4.3.5
