--- a/packages/atoms/python-extra/dev-python/setuptools_scm_git_archive/definition.yaml
+++ b/packages/atoms/python-extra/dev-python/setuptools_scm_git_archive/definition.yaml
@@ -1,5 +1,5 @@
 name: setuptools_scm_git_archive
-version: "1.4"
+version: 1.4.1
 category: dev-python
 use_flags:
 - -python_targets_python3_10
@@ -38,4 +38,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/setuptools_scm_git_archive
   original.package.slot: "0"
-  original.package.version: "1.4"
+  original.package.version: 1.4.1
