dev-python/kiwisolver: Bump v.1.4.5

--- a/packages/atoms/python-extra/dev-python/kiwisolver/definition.yaml
+++ b/packages/atoms/python-extra/dev-python/kiwisolver/definition.yaml
@@ -1,5 +1,5 @@
 name: kiwisolver
-version: 1.4.4+1
+version: 1.4.5
 category: dev-python
 use_flags:
 - -python_targets_python3_10
@@ -39,4 +39,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/kiwisolver
   original.package.slot: "0"
-  original.package.version: 1.4.4
+  original.package.version: 1.4.5
