--- a/packages/atoms/emulation/app-emulation/docker-slim/definition.yaml
+++ b/packages/atoms/emulation/app-emulation/docker-slim/definition.yaml
@@ -1,5 +1,5 @@
 name: docker-slim
-version: 1.40.3+1
+version: 1.40.4
 category: app-emulation
 annotations:
   subsets:
@@ -19,4 +19,4 @@ labels:
   kit: core-kit
   original.package.name: app-emulation/docker-slim
   original.package.slot: "0"
-  original.package.version: 1.40.3
+  original.package.version: 1.40.4
