--- a/packages/atoms/base-multimedia4/media-libs/libffado/definition.yaml
+++ b/packages/atoms/base-multimedia4/media-libs/libffado/definition.yaml
@@ -1,5 +1,5 @@
 name: libffado
-version: 2.4.1
+version: 2.4.7
 category: media-libs
 use_flags:
 - -python_single_target_python2_7
@@ -45,39 +45,39 @@ uri:
 - http://www.ffado.org
 license: GPL-2 GPL-3
 labels:
-  DEPEND: python_single_target_python3_7? ( dev-lang/python:3.7 >=dev-lang/python-exec-2:=[python_targets_python3_7]
-    ) python_single_target_python3_9? ( dev-lang/python:3.9 >=dev-lang/python-exec-2:=[python_targets_python3_9]
-    ) python_single_target_python3_8? ( dev-lang/python:3.8 >=dev-lang/python-exec-2:=[python_targets_python3_8]
-    ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-exec-2:=[python_targets_python2_7]
-    ) python_single_target_python3_10? ( dev-lang/python:3.10 >=dev-lang/python-exec-2:=[python_targets_python3_10]
-    ) dev-cpp/libxmlpp:2.6[-mgorny(-)] dev-libs/dbus-c++ dev-libs/libconfig[cxx,-mgorny(-)]
-    media-libs/alsa-lib media-libs/libiec61883[-mgorny(-)] sys-apps/dbus sys-libs/libavc1394[-mgorny(-)]
-    sys-libs/libraw1394[-mgorny(-)] qt5? ( dev-python/dbus-python[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python2_7(-)?,python_targets_python3_10(-)?,-python_single_target_pypy3(-),-python_single_target_python3_6(-)]
-    dev-python/PyQt5[dbus,python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python2_7(-)?,python_targets_python3_10(-)?,-python_single_target_pypy3(-),-python_single_target_python3_6(-)]
-    x11-misc/xdg-utils ) virtual/pkgconfig dev-util/scons[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python2_7(-)?,python_targets_python3_10(-)?,-python_single_target_pypy3(-),-python_single_target_python3_6(-)]
+  BDEPEND: virtual/pkgconfig dev-util/scons[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python2_7(-)?,python_targets_python3_10(-)?,-python_single_target_pypy3(-),-python_single_target_python3_6(-)]
     python_single_target_python3_7? ( dev-lang/python:3.7 >=dev-lang/python-exec-2:=[python_targets_python3_7]
     ) python_single_target_python3_9? ( dev-lang/python:3.9 >=dev-lang/python-exec-2:=[python_targets_python3_9]
     ) python_single_target_python3_8? ( dev-lang/python:3.8 >=dev-lang/python-exec-2:=[python_targets_python3_8]
     ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-exec-2:=[python_targets_python2_7]
     ) python_single_target_python3_10? ( dev-lang/python:3.10 >=dev-lang/python-exec-2:=[python_targets_python3_10]
     ) virtual/pkgconfig
+  DEPEND: python_single_target_python3_7? ( dev-lang/python:3.7 >=dev-lang/python-exec-2:=[python_targets_python3_7]
+    ) python_single_target_python3_9? ( dev-lang/python:3.9 >=dev-lang/python-exec-2:=[python_targets_python3_9]
+    ) python_single_target_python3_8? ( dev-lang/python:3.8 >=dev-lang/python-exec-2:=[python_targets_python3_8]
+    ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-exec-2:=[python_targets_python2_7]
+    ) python_single_target_python3_10? ( dev-lang/python:3.10 >=dev-lang/python-exec-2:=[python_targets_python3_10]
+    ) dev-cpp/libxmlpp:3.0 >=dev-libs/dbus-c++-0.9.0-r5 dev-libs/libconfig[cxx] media-libs/alsa-lib
+    media-libs/libiec61883 sys-apps/dbus sys-libs/libavc1394 sys-libs/libraw1394 qt5?
+    ( dev-python/dbus-python[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python2_7(-)?,python_targets_python3_10(-)?,-python_single_target_pypy3(-),-python_single_target_python3_6(-)]
+    dev-python/PyQt5[dbus,python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python2_7(-)?,python_targets_python3_10(-)?,-python_single_target_pypy3(-),-python_single_target_python3_6(-)]
+    x11-misc/xdg-utils )
   IUSE: debug qt5 test-programs python_single_target_python3_7 python_single_target_python3_9
     python_single_target_python3_8 python_single_target_python2_7 python_single_target_python3_10
     python_targets_python3_7 python_targets_python3_9 python_targets_python3_8 python_targets_python2_7
-    python_targets_python3_10 abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64
-    abi_mips_o32 abi_s390_32 abi_s390_64
+    python_targets_python3_10
   RDEPEND: python_single_target_python3_7? ( dev-lang/python:3.7 >=dev-lang/python-exec-2:=[python_targets_python3_7]
     ) python_single_target_python3_9? ( dev-lang/python:3.9 >=dev-lang/python-exec-2:=[python_targets_python3_9]
     ) python_single_target_python3_8? ( dev-lang/python:3.8 >=dev-lang/python-exec-2:=[python_targets_python3_8]
     ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-exec-2:=[python_targets_python2_7]
     ) python_single_target_python3_10? ( dev-lang/python:3.10 >=dev-lang/python-exec-2:=[python_targets_python3_10]
-    ) dev-cpp/libxmlpp:2.6[-mgorny(-)] dev-libs/dbus-c++ dev-libs/libconfig[cxx,-mgorny(-)]
-    media-libs/alsa-lib media-libs/libiec61883[-mgorny(-)] sys-apps/dbus sys-libs/libavc1394[-mgorny(-)]
-    sys-libs/libraw1394[-mgorny(-)] qt5? ( dev-python/dbus-python[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python2_7(-)?,python_targets_python3_10(-)?,-python_single_target_pypy3(-),-python_single_target_python3_6(-)]
+    ) dev-cpp/libxmlpp:3.0 >=dev-libs/dbus-c++-0.9.0-r5 dev-libs/libconfig[cxx] media-libs/alsa-lib
+    media-libs/libiec61883 sys-apps/dbus sys-libs/libavc1394 sys-libs/libraw1394 qt5?
+    ( dev-python/dbus-python[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python2_7(-)?,python_targets_python3_10(-)?,-python_single_target_pypy3(-),-python_single_target_python3_6(-)]
     dev-python/PyQt5[dbus,python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python2_7(-)?,python_targets_python3_10(-)?,-python_single_target_pypy3(-),-python_single_target_python3_6(-)]
-    x11-misc/xdg-utils ) !<media-sound/jack-audio-connection-kit-0.122.0:0 !<media-sound/jack-audio-connection-kit-1.9.9:2
+    x11-misc/xdg-utils )
   emerge.packages: media-libs/libffado
   kit: media-kit
   original.package.name: media-libs/libffado
   original.package.slot: "0"
-  original.package.version: 2.4.1
+  original.package.version: 2.4.7
