--- a/packages/atoms/python-extra/dev-python/msgpack/build.yaml
+++ b/packages/atoms/python-extra/dev-python/msgpack/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+- >-
+  sed -i -e 's|,_cmsgpack||g' /var/git/meta-repo/kits/python-modules-kit/dev-python/msgpack/msgpack-1.0.7-r1.ebuild
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
