--- a/packages/toolchain/telemetry/definition.yaml
+++ b/packages/toolchain/telemetry/definition.yaml
@@ -12,6 +12,9 @@ requires:
   - name: consul_exporter-bin
     category: app-metrics
     version: '>=0'
+  - name: freeradius_exporter
+    category: app-metrics
+    version: '>=0'
   - name: memcached_exporter-bin
     category: app-metrics
     version: '>=0'
