--- a/packages/atoms/devtools/dev-util/idea-community/definition.yaml
+++ b/packages/atoms/devtools/dev-util/idea-community/definition.yaml
@@ -1,5 +1,5 @@
 name: idea-community
-version: "2023.2"
+version: 2023.2.3
 category: dev-util
 use_flags:
 - -system-java
@@ -29,4 +29,4 @@ labels:
   kit: dev-kit
   original.package.name: dev-util/idea-community
   original.package.slot: "0"
-  original.package.version: "2023.2"
+  original.package.version: 2023.2.3
