--- a/packages/atoms/devtools/dev-util/datagrip/definition.yaml
+++ b/packages/atoms/devtools/dev-util/datagrip/definition.yaml
@@ -1,5 +1,5 @@
 name: datagrip
-version: "2023.2"
+version: 2023.2.2
 category: dev-util
 use_flags:
 - system-java
@@ -32,4 +32,4 @@ labels:
   kit: dev-kit
   original.package.name: dev-util/datagrip
   original.package.slot: "0"
-  original.package.version: "2023.2"
+  original.package.version: 2023.2.2
