--- a/packages/atoms/browsers/www-client/vivaldi-snapshot/definition.yaml
+++ b/packages/atoms/browsers/www-client/vivaldi-snapshot/definition.yaml
@@ -1,5 +1,5 @@
 name: vivaldi-snapshot
-version: 6.2.3096.3+2
+version: 6.4.3152.3
 category: www-client
 use_flags:
 - -widevine
@@ -64,4 +64,4 @@ labels:
   kit: browser-kit
   original.package.name: www-client/vivaldi-snapshot
   original.package.slot: "0"
-  original.package.version: 6.2.3096.3
+  original.package.version: 6.4.3152.3
