www-client/firefox-beta-bin: Bump v.119.0

--- a/packages/atoms/browsers/www-client/firefox-beta-bin/definition.yaml
+++ b/packages/atoms/browsers/www-client/firefox-beta-bin/definition.yaml
@@ -1,5 +1,5 @@
 name: firefox-beta-bin
-version: "117.0"
+version: "119.0"
 category: www-client
 use_flags:
 - -alsa
@@ -52,9 +52,10 @@ labels:
     l10n_hu l10n_hy-AM l10n_ia l10n_id l10n_is l10n_it l10n_ja l10n_ka l10n_kab l10n_kk
     l10n_km l10n_kn l10n_ko l10n_lij l10n_lt l10n_lv l10n_mk l10n_mr l10n_ms l10n_my
     l10n_nb-NO l10n_ne-NP l10n_nl l10n_nn-NO l10n_oc l10n_pa-IN l10n_pl l10n_pt-BR
-    l10n_pt-PT l10n_rm l10n_ro l10n_ru l10n_sc l10n_sco l10n_si l10n_sk l10n_sl l10n_son
-    l10n_sq l10n_sr l10n_sv-SE l10n_szl l10n_ta l10n_te l10n_tg l10n_th l10n_tl l10n_tr
-    l10n_trs l10n_uk l10n_ur l10n_uz l10n_vi l10n_xh l10n_zh-CN l10n_zh-TW kernel_linux
+    l10n_pt-PT l10n_rm l10n_ro l10n_ru l10n_sat l10n_sc l10n_sco l10n_si l10n_sk l10n_sl
+    l10n_son l10n_sq l10n_sr l10n_sv-SE l10n_szl l10n_ta l10n_te l10n_tg l10n_th l10n_tl
+    l10n_tr l10n_trs l10n_uk l10n_ur l10n_uz l10n_vi l10n_xh l10n_zh-CN l10n_zh-TW
+    kernel_linux
   RDEPEND: dev-libs/atk >=sys-apps/dbus-0.60 >=dev-libs/dbus-glib-0.72 >=dev-libs/glib-2.26:2
     media-libs/fontconfig >=media-libs/freetype-2.4.10 >=x11-libs/cairo-1.10[X] x11-libs/gdk-pixbuf
     >=x11-libs/gtk+-2.18:2 >=x11-libs/gtk+-3.4.0:3 x11-libs/libX11 x11-libs/libXcomposite
@@ -66,4 +67,4 @@ labels:
   kit: browser-kit
   original.package.name: www-client/firefox-beta-bin
   original.package.slot: "0"
-  original.package.version: 117.0_beta3
+  original.package.version: 119.0_beta9
