media-video/movit: Bump v.1.6.2+1

--- a/packages/atoms/desktop2/media-video/movit/definition.yaml
+++ b/packages/atoms/desktop2/media-video/movit/definition.yaml
@@ -1,5 +1,5 @@
 name: movit
-version: 1.6.2
+version: 1.6.2+1
 category: media-video
 requires:
 - name: eigen
@@ -26,12 +26,10 @@ uri:
 - https://movit.sesse.net/
 license: GPL-2+
 labels:
-  DEPEND: media-libs/mesa[X(+)] >=dev-cpp/eigen-3.2.0:3 media-libs/libepoxy >=sci-libs/fftw-3
-    media-libs/libsdl2 app-arch/unzip
-  RDEPEND: media-libs/mesa[X(+)] >=dev-cpp/eigen-3.2.0:3 media-libs/libepoxy >=sci-libs/fftw-3
-    media-libs/libsdl2
+  DEPEND: media-libs/mesa[X(+)] dev-cpp/eigen media-libs/libepoxy sci-libs/fftw media-libs/libsdl2
+  RDEPEND: media-libs/mesa[X(+)] dev-cpp/eigen media-libs/libepoxy sci-libs/fftw media-libs/libsdl2
   emerge.packages: media-video/movit
   kit: media-kit
   original.package.name: media-video/movit
   original.package.slot: "0"
-  original.package.version: 1.6.2
+  original.package.version: 1.6.2-r1
