app-office/gnucash: Bump v.5.4

--- a/packages/atoms/office/app-office/gnucash/definition.yaml
+++ b/packages/atoms/office/app-office/gnucash/definition.yaml
@@ -1,5 +1,5 @@
 name: gnucash
-version: 5.3+1
+version: "5.4"
 category: app-office
 use_flags:
 - -aqbanking
@@ -83,4 +83,4 @@ labels:
   kit: desktop-kit
   original.package.name: app-office/gnucash
   original.package.slot: "0"
-  original.package.version: "5.3"
+  original.package.version: "5.4"
