www-servers/caddy: Bump v.2.7.5

--- a/packages/atoms/server/www-servers/caddy/definition.yaml
+++ b/packages/atoms/server/www-servers/caddy/definition.yaml
@@ -1,5 +1,5 @@
 name: caddy
-version: 2.7.2
+version: 2.7.5
 category: www-servers
 use_flags:
 - filecaps
@@ -16,10 +16,10 @@ uri:
 license: Apache-2.0 BSD ECL-2.0 MIT
 labels:
   BDEPEND: '>=dev-lang/go-1.12 app-arch/unzip'
-  DEPEND: filecaps? ( sys-libs/libcap )
+  DEPEND: filecaps? ( sys-libs/libcap ) sys-apps/shadow
   IUSE: +filecaps
   emerge.packages: www-servers/caddy
   kit: core-server-kit
   original.package.name: www-servers/caddy
   original.package.slot: "0"
-  original.package.version: 2.7.2
+  original.package.version: 2.7.5
