media-sound/spotify: Bump v.1.2.22.982

--- a/packages/atoms/desktop2/media-sound/spotify/definition.yaml
+++ b/packages/atoms/desktop2/media-sound/spotify/definition.yaml
@@ -1,5 +1,5 @@
 name: spotify
-version: 1.2.13.661
+version: 1.2.22.982
 category: media-sound
 use_flags:
 - -libressl
@@ -67,9 +67,9 @@ labels:
     net-misc/curl[ssl] net-print/cups[ssl] pulseaudio? ( media-sound/pulseaudio )
     !pulseaudio? ( media-sound/apulse ) systray? ( gnome-extra/gnome-integration-spotify
     ) x11-libs/gtk+:2 app-accessibility/at-spi2-atk x11-libs/libXScrnSaver x11-libs/libXtst
-    x11-libs/libSM x11-libs/libICE
+    x11-libs/libSM x11-libs/libICE dev-libs/libayatana-appindicator
   emerge.packages: media-sound/spotify
   kit: media-kit
   original.package.name: media-sound/spotify
   original.package.slot: "0"
-  original.package.version: 1.2.13.661
+  original.package.version: 1.2.22.982
