media-libs/opencv: Bump v.4.8.1+2

--- a/packages/atoms/desktop2/media-libs/opencv/definition.yaml
+++ b/packages/atoms/desktop2/media-libs/opencv/definition.yaml
@@ -1,5 +1,5 @@
 name: opencv
-version: 4.8.1+1
+version: 4.8.1+2
 category: media-libs
 use_flags:
 - -cuda
@@ -9,7 +9,6 @@ use_flags:
 - -glog
 - -gphoto2
 - -ieee1394
-- -lapack
 - -libav
 - -opencl
 - -openexr
@@ -20,13 +19,13 @@ use_flags:
 - -tesseract
 - -threads
 - -vtk
-- -webp
 - -xine
 - contrib
 - ffmpeg
 - gstreamer
 - gtk
 - jpeg
+- lapack
 - opengl
 - png
 - python
@@ -34,6 +33,7 @@ use_flags:
 - tiff
 - v4l
 - vaapi
+- webp
 requires:
 - name: python
   version: '>=0'
