media-libs/libopenshot-audio: Bump v.0.3.2

--- a/packages/atoms/desktop2/media-libs/libopenshot-audio/definition.yaml
+++ b/packages/atoms/desktop2/media-libs/libopenshot-audio/definition.yaml
@@ -1,5 +1,5 @@
 name: libopenshot-audio
-version: 0.2.2
+version: 0.3.2
 category: media-libs
 requires:
 - name: alsa-lib
@@ -38,7 +38,7 @@ labels:
   RDEPEND: media-libs/alsa-lib media-libs/freetype sys-libs/zlib x11-libs/libX11 x11-libs/libXcursor
     x11-libs/libXext x11-libs/libXinerama x11-libs/libXrandr
   emerge.packages: media-libs/libopenshot-audio
-  kit: media-kit
+  kit: geaaru-kit
   original.package.name: media-libs/libopenshot-audio
   original.package.slot: "0"
-  original.package.version: 0.2.2
+  original.package.version: 0.3.2
