--- a/packages/atoms/desktop2/media-libs/libopenshot-audio/build.yaml
+++ b/packages/atoms/desktop2/media-libs/libopenshot-audio/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+# Temporary
+- >-
+  luet repo update && luet upgrade -y && luet cleanup
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
