kernel-5.15/nvidia-kernel-modules: Bump v.535.86.05

--- a/packages/kernels/5.15/nvidia-drivers/definition.yaml
+++ b/packages/kernels/5.15/nvidia-drivers/definition.yaml
@@ -1,5 +1,5 @@
 name: nvidia-kernel-modules
-version: 525.85.05+8
+version: 535.86.05
 category: kernel-5.15
 requires:
 - name: nvidia-drivers-common
@@ -7,11 +7,11 @@ requires:
   category: kernel
 provides:
 - name: nvidia-kernel-modules
-  version: 525.85.05+1
+  version: 535.86.05
   category: x11-drivers-5.15
 annotations:
   kernel_module: true
 labels:
   emerge.packages: x11-drivers/nvidia-kernel-modules
   kernel.suffix: macaroni
-  kernel.version: 5.15.118
+  kernel.version: 5.15.136
