kernel-6.5/virtualbox-modules: Bump v.7.0.10.158379+1

--- a/packages/kernels/6.5/virtualbox-modules/definition.yaml
+++ b/packages/kernels/6.5/virtualbox-modules/definition.yaml
@@ -1,10 +1,10 @@
 name: virtualbox-modules
-version: 7.0.10.158379
+version: 7.0.10.158379+1
 category: kernel-6.5
 requires:
-  - name: virtualbox-common
-    version: '>=0'
-    category: kernel
+- name: virtualbox-common
+  version: '>=0'
+  category: kernel
 annotations:
   kernel_module: true
 labels:
