portage-converter/desktop2: Add new use flags to opencv

--- a/portage-converter/desktop2.yaml
+++ b/portage-converter/desktop2.yaml
@@ -191,6 +191,8 @@ artefacts:
       - contrib
       - python_single_target_python3_9
       - python_targets_python3_9
+      - lapack
+      - webp
   packages:
     - media-libs/opencv
 
