portage-converter/funtoo: Add ramdisk

--- a/portage-converter/funtoo.yaml
+++ b/portage-converter/funtoo.yaml
@@ -91,6 +91,7 @@ artefacts:
   packages:
     - sys-apps/metatools
     - sys-apps/fchroot
+    - sys-apps/ramdisk
 
 include_layers:
 - layers/macaroni-funtoo-race17.yaml
