portage-converter/emulation: Add docker-buildx, docker-compose

--- a/portage-converter/emulation.yaml
+++ b/portage-converter/emulation.yaml
@@ -484,6 +484,12 @@ artefacts:
         entities merge --specs-dir /usr/share/macaroni/entities/
         -e lxd
 
+
+- tree: packages/atoms/emulation
+  packages:
+    - app-emulation/docker-buildx
+    - app-emulation/docker-compose
+
 include_layers:
 - layers/macaroni-funtoo-race16.yaml
 
