kernel-5.4/virtualbox-guest-additions: Bump v.7.0.10.158379+1

--- a/packages/kernels/5.4/virtualbox-guest-additions/definition.yaml
+++ b/packages/kernels/5.4/virtualbox-guest-additions/definition.yaml
@@ -1,5 +1,5 @@
 name: virtualbox-guest-additions
-version: 7.0.10.158379
+version: 7.0.10.158379+1
 category: kernel-5.4
 provides:
 - name: virtualbox-guest-additions
