kernel-5.4/rtw89: Bump v.0.20220824+17

--- a/packages/kernels/5.4/rtw89/build.yaml
+++ b/packages/kernels/5.4/rtw89/build.yaml
@@ -10,7 +10,8 @@ prelude:
 # macaroni-lts-full installs modules.order and modules.builtin
 - >-
   luet repo update &&
-  luet i kernel/macaroni-lts-full --finalizer-env "BUILD_ISO=1" &&
+  luet i kernel-5.4/macaroni-full kernel-5.4/macaroni-modules --nodeps --finalizer-env "BUILD_ISO=1" &&
+  luet i git make sys-apps/kmod &&
   luet cleanup
 - >-
   ln -s
