sys-power/nut: Bump v.2.8.0+1

--- a/packages/atoms/power/sys-power/nut/build.yaml
+++ b/packages/atoms/power/sys-power/nut/build.yaml
@@ -1,4 +1,7 @@
 prelude:
+# Temporary
+- >-
+  cp nut-2.8.0-r2.ebuild /var/git/extra-kits/geaaru-kit/sys-power/nut/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
