sys-apps/i2c-tools: Fix YAML

--- a/packages/atoms/power/sys-apps/i2c-tools/definition.yaml
+++ b/packages/atoms/power/sys-apps/i2c-tools/definition.yaml
@@ -1,5 +1,5 @@
 name: i2c-tools
-version: 4.3
+version: "4.3"
 category: sys-apps
 use_flags:
 - -python_targets_python3_10
@@ -44,4 +44,4 @@ labels:
   kit: geaaru-kit
   original.package.name: sys-apps/i2c-tools
   original.package.slot: "0"
-  original.package.version: 4.3
+  original.package.version: "4.3"
