portage-converter/tools.yaml: Add asciinema

--- a/portage-converter/tools.yaml
+++ b/portage-converter/tools.yaml
@@ -422,6 +422,10 @@ artefacts:
     - dev-util/ccache
     - sys-devel/distcc
 
+- tree: packages/atoms/tools
+  packages:
+    - app-misc/asciinema
+
 include_layers:
 - layers/macaroni-funtoo-race15.yaml
 
