portage-converter/tools: Add speedtest-cli

--- a/portage-converter/tools.yaml
+++ b/portage-converter/tools.yaml
@@ -425,6 +425,7 @@ artefacts:
 - tree: packages/atoms/tools
   packages:
     - app-misc/asciinema
+    - net-analyzer/speedtest-cli
 
 include_layers:
 - layers/macaroni-funtoo-race15.yaml
