iso/funtoo-live-testing.yaml: Using firefox

--- a/iso/funtoo-live-testing.yaml
+++ b/iso/funtoo-live-testing.yaml
@@ -19,8 +19,10 @@ packages:
   - virtual/grub
 
   - virtual-entities/base
+  # Splitted package
+  - pinentry-gnome
 
-  - www-client/firefox-bin
+  - www-client/firefox
   - gnome-base/gnome
 
   - sys-apps/gentoo-functions
