app-crypt/pinentry-gnome: Bump v1.2.1+1

--- a/packages/macaroni/pinentry/collection.yaml
+++ b/packages/macaroni/pinentry/collection.yaml
@@ -23,17 +23,18 @@ packages:
     name: "pinentry-qt"
     description: Simple passphrase entry dialogs which utilize the Assuan protocol for Qt
     includes:
-      - ^/usr/bin/pinentry-qt5
-      - ^/usr/bin/pinentry-qt
+      - /usr/bin/pinentry-qt5
+      - /usr/bin/pinentry-qt
 
   - <<: *package
     name: "pinentry-gnome"
+    version: 1.2.1+1
     description: Simple passphrase entry dialogs which utilize the Assuan protocol for Gnome
     includes:
-      - ^/usr/bin/pinentry-gnome
+      - /usr/bin/pinentry-gnome
 
   - <<: *package
     name: "pinentry-efl"
     description: Simple passphrase entry dialogs which utilize the Assuan protocol for Enlightenment.
     includes:
-      - ^/usr/bin/pinentry-efl
+      - /usr/bin/pinentry-efl
