--- a/packages/atoms/boot/sys-kernel/dracut/definition.yaml
+++ b/packages/atoms/boot/sys-kernel/dracut/definition.yaml
@@ -1,5 +1,5 @@
 name: dracut
-version: "049"
+version: "059"
 category: sys-kernel
 use_flags:
 - -selinux
@@ -52,4 +52,4 @@ labels:
   kit: core-kit
   original.package.name: sys-kernel/dracut
   original.package.slot: "0"
-  original.package.version: 049-r1
+  original.package.version: 059
