kernel-5.15/zfs-kmod: Bump v.2.2.0+1

--- a/packages/kernels/5.15/zfs-kmod/definition.yaml
+++ b/packages/kernels/5.15/zfs-kmod/definition.yaml
@@ -1,5 +1,5 @@
 name: zfs-kmod
-version: 2.2.0
+version: 2.2.0+1
 category: kernel-5.15
 requires:
 - name: zfs-common
@@ -12,4 +12,4 @@ provides:
 labels:
   emerge.packages: sys-fs/zfs-kmod
   kernel.suffix: macaroni
-  kernel.version: 5.15.136
+  kernel.version: 5.15.137
