portage-converter/kits-specs-map.yaml: Update

--- a/portage-converter/kits-specs-map.yaml
+++ b/portage-converter/kits-specs-map.yaml
@@ -666,6 +666,9 @@ seeds:
       - file: devtools.yaml
         dir: devtools
 
+      - file: ide.yaml
+        dir: ide
+
       - file: base-text2.yaml
         dir: base-text2
 
